    - Corrected the OrganizationURL to be absolute
    - VPATH and VURL processing tweaks
    - Improved error reporting in zxididp and zxidhlo
    - Eliminate coordinates from the end of the branding login buttons
    - Added use of ZXIDConf <init-param> (you define it in web.xml) to servlets

zxid-1.06:: 10.12.2011
    - Merged improvements (CDC, sol8x86, free functions, mem leak fixes) by grubba@@grubba.org from git://github.com/grubba/zxid.git
    - Added VURL for virtual hosting
    - Added support for OrganizationURL as button_url for branding buttons (per symlabs-saml-displayname-2008.pdf submitted to OASIS SSTC)
    - Deleted ORG_URL config option. Use BUTTON_URL instead.

zxid-1.05:: 7.12.2011
    - Added DEBUG and DEBUG_LOG options to manipulate debug level from config file

zxid-1.04:: 5.12.2011
    - Added VPATH for virtual hosting support, documented ZXID_CONF environment variable

zxid-1.03:: 12.8.2011
    - Fixed timestamp generation in pep call

zxid-1.02:: 22.7.2011
    - Fixed a file name folding bug that could lead to failure to discover a service
    - Added curl_easy_reset() to zxid_http_post_raw(), reportedly fixing a segv

zxid-1.01:: 21.6.2011
    - Added to zxidhlo a possibility of giving CONF using -D at compile time
    - Fixed long int argument to %d warnings (happened with x86_64 architecture build)
    - Fixed null pointer check in zxid_extract_body()
    - improved error reporting to show cwd in vopen_fd_from_path()
    - Fixed mod_auth_saml to add to the cookies, not to replace them (replacement caused apps behind it to misbehave)

zxid-1.0:: 31.5.2011
    - Promoted to 1.0 status

zxid-0.83:: 11.3.2011
    - Fixed ordering of EPRs returned by zxid_get_epr() to always to be same as with zxid_find_epr().
    - Made private key reading more robust by tolerating omission of RSA or DSA designation

zxid-0.82:: 10.3.2011
    - Added Proxy IdP support
    - Fixed supplying Destination attribute in AuthnReq, restoring Shib compatibility