@@ -1,4 +1,5 @@
 /* zxidwspleaf.java  -  Demonstrate server side of handling a web service cal
+ * Copyright (c) 2012 Synergetics (sampo@synergetics.be), All Rights Reserved.
  * Copyright (c) 2010-2011 Sampo Kellomaki (sampo@iki.fi), All Rights Reserved.
  * Copyright (c) 2009 Symlabs (symlabs@symlabs.com), All Rights Reserved.
  * Author: Sampo Kellomaki (sampo@iki.fi)
@@ -9,6 +10,7 @@
  * $Id: zxidappdemo.java,v 1.3 2009-11-20 20:27:13 sampo Exp $
  * 16.10.2009, created --Sampo
  * 16.2.2010, fixed virtual hosting --Sampo
+ * 7.2.2012, new virtual hosting with <init-param> supplied config --Sampo
  *
  * See also: zxid-java.pd, zxidappdemo.java for client side
  *
@@ -23,18 +25,37 @@ import javax.servlet.*;
 import javax.servlet.http.*;
 
 public class zxidwspleaf extends HttpServlet {
-    static final String conf = "URL=http://sp1.zxidsp.org:8080/sso&PATH=/var/zxid/";
-    static zxidjava.zxid_conf cf;
-    static {
-	// CONFIG: You must have created /var/zxid directory hierarchy. See `make dir'
-	// CONFIG: You must create edit the URL to match your domain name and port
-	// CONFIG: Usually you create and edit /var/zxid/zxid.conf and override the URL there.
-	// CONFIG: However, this program sets the URL dynamically, see calls to zxidjni.url_set()
-	System.loadLibrary("zxidjni");
-	cf = zxidjni.new_conf_to_cf(conf);
-	zxidjni.set_opt(cf, 1, 1);
-    }
+    static zxidjava.zxid_conf cf = null;
+    static { System.loadLibrary("zxidjni"); }
     
+    public void init_zxid_vhost(HttpServletRequest req)
+	throws ServletException
+    {
+	// CONFIG: You must have created /var/zxid directory hierarchy. See `make dir'
+	// CONFIG: To set config string, edit web.xml (hope you know where it is) and
+	// add to your servlets sections like
+        //  <servlet>
+	//    <servlet-name>zxidsrvlet</servlet-name><servlet-class>zxidsrvlet</servlet-class>
+	//    <init-param>
+	//      <param-name>ZXIDConf</param-name><param-value>PATH=/var/zxid/</param-value>
+	//    </init-param>
+	//  </servlet>
+	// CONFIG: You must edit the URL to match your domain name and port, usually you
+	// CONFIG: would create and edit /var/zxid/zxid.conf and override the URL there.
+	// CONFIG: However, this program sets the URL dynamically, see calls to zxidjni.url_set()
+	if (cf == null) {
+	    String conf = getServletConfig().getInitParameter("ZXIDConf"); 
+	    cf = zxidjni.new_conf_to_cf(conf);
+	    zxidjni.set_opt(cf, 1, 1);
+	}
+	String scheme = req.getScheme();
+	String host_hdr = req.getHeader("HOST");
+	String fullURL = req.getRequestURI();
+	String url = scheme + "://" + host_hdr + fullURL;
+	System.err.print("url("+url+")\n");  // URL=http://sp.tas3.pt:8080/zxidservlet/wspdemo
+	zxidjni.url_set(cf, url);  // Virtual host support
+    }
+
     // Only reason why a pure WSP would handle GET is supporting WKL metadata
     // exchange (o=B). However, a hybrid frontend SP plus WSP would handle its SSO here.
 
@@ -42,14 +63,8 @@ public class zxidwspleaf extends HttpServlet {
 	throws ServletException, IOException
     {
 	System.err.print("Start GET...\n");
-	String scheme = req.getScheme();
-	String host_hdr = req.getHeader("HOST");
-	String fullURL = req.getRequestURI();
-	String qs = req.getQueryString();
-	String url = scheme + "://" + host_hdr + fullURL;
-	System.err.print("url("+url+")\n"); // URL=http://sp.tas3.pt:8080/zxidservlet/wspleaf
-	zxidjni.url_set(cf, url);  // Virtual host support
-	
+	init_zxid_vhost(req);
+	String qs = req.getQueryString();	
 	if (qs != null && qs.equals("o=B")) {  // Metadata check
 	    String ret = zxidjni.simple_cf(cf, -1, qs, null, 0x3d54);  // QS response requested
 	    System.err.print(ret);
@@ -72,7 +87,7 @@ public class zxidwspleaf extends HttpServlet {
 	}
 	
 	res.setContentType("text/html");
-	res.getOutputStream().print("<title>ZXID Leaf WSP</title><body><h1>ZXID Leaf WSP does not offer web GUI (" + fullURL + ")</H1>\n<pre>"+qs+"</pre>");
+	res.getOutputStream().print("<title>ZXID Leaf WSP</title><body><h1>ZXID Leaf WSP does not offer web GUI (" + req.getRequestURI() + ")</H1>\n<pre>"+qs+"</pre>");
     }
 
     // Handle a SOAP call, which is always a POST
@@ -82,14 +97,8 @@ public class zxidwspleaf extends HttpServlet {
     {
 	String ret;
 	System.err.print("\n============ LEAF WSP Start SOAP POST ============\n");
+	init_zxid_vhost(req);
 	zxidjava.zxid_ses ses = zxidjni.alloc_ses(cf);
-	String scheme = req.getScheme();
-	String host_hdr = req.getHeader("HOST");
-	String fullURL = req.getRequestURI();
-	String qs = req.getQueryString();
-	String url = scheme + "://" + host_hdr + fullURL;
-	System.err.print("url("+url+")\n");	
-	zxidjni.url_set(cf, url);  // Virtual host support
 
 	// Java / Servlet complicated way of reading in the POST input
 
